--- a/Android-WardrobeApp/app/src/main/AndroidManifest.xml
+++ b/Android-WardrobeApp/app/src/main/AndroidManifest.xml
@@ -13,22 +13,23 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"
+        <activity android:name=".LoginActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:noHistory="true"
+            android:excludeFromRecents="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
+        <activity android:name=".MainActivity"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme.NoActionBar">
+        </activity>
         <activity android:name=".WardrobeActivity" />
         <activity android:name=".ClothingDetailedViewActivity" />
-        <activity android:name=".AddClothingActivity"></activity>
+        <activity android:name=".AddClothingActivity" />
     </application>
 
 </manifest>
