--- a/Android-WardrobeApp/app/src/main/AndroidManifest.xml
+++ b/Android-WardrobeApp/app/src/main/AndroidManifest.xml
@@ -13,23 +13,26 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
+            android:excludeFromRecents="true"
             android:label="@string/app_name"
-            android:noHistory="true"
-            android:excludeFromRecents="true">
+            android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".WardrobeActivity" />
         <activity android:name=".ClothingDetailedViewActivity" />
         <activity android:name=".AddClothingActivity" />
+        <activity android:name=".SignupActivity" />
+        <activity android:name=".UserProfileActivity"></activity>
     </application>
 
 </manifest>
