--- a/Android-WardrobeApp/app/src/main/AndroidManifest.xml
+++ b/Android-WardrobeApp/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,13 +21,9 @@
             android:name=".LoginActivity"
             android:excludeFromRecents="true"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme"
-            android:noHistory="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:noHistory="true"
+            android:theme="@style/AppTheme">
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".MainActivity"
@@ -33,7 +33,15 @@
         </activity>
 
         <activity android:name=".ClothingDetailedViewActivity" />
-        <activity android:name=".AddClothingActivity" />
+
+        <activity android:name=".AddClothingActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".SignupActivity" />
         <activity android:name=".UserProfileActivity"></activity>
     </application>
