--- a/Android-WardrobeApp/app/src/main/AndroidManifest.xml
+++ b/Android-WardrobeApp/app/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:allowBackup="true"
@@ -29,13 +30,10 @@
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
-
         </activity>
-
         <activity android:name=".ClothingDetailedViewActivity" />
         <activity android:name=".AddClothingActivity" />
         <activity android:name=".SignupActivity" />
         <activity android:name=".UserProfileActivity"></activity>
     </application>
-
 </manifest>
