--- a/Android-WardrobeApp/app/src/main/AndroidManifest.xml
+++ b/Android-WardrobeApp/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" android:maxSdkVersion="18" />
 
     <application
         android:allowBackup="true"
@@ -13,6 +15,15 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="edu.northeastern.wardrobeapp.android_wardrobeapp"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/file_paths"/>
+        </provider>
         <activity
             android:name=".LoginActivity"
             android:excludeFromRecents="true"
@@ -32,7 +43,7 @@
         </activity>
 
         <activity android:name=".ClothingDetailedViewActivity" />
-        <activity android:name=".AddClothingActivity" />
+        <activity android:name=".AddClothingActivity"></activity>
         <activity android:name=".SignupActivity" />
         <activity android:name=".UserProfileActivity"></activity>
     </application>
